# dci-core-mm

./: CMakeLists.txt
cmakeModules/: FindValgrind.cmake
include/dci/: mm.hpp
include/dci/mm/: api.hpp  heap.hpp  stack.hpp
include/dci/mm/heap/: allocable.hpp
src/: config.hpp.in  heap.cpp  mm.cpp  stack.cpp
src/impl/: bitIndex.hpp  bitIndex.ipp  stack.cpp  stack.hpp  virtualSpace.cpp  virtualSpace.hpp  vm-posix.cpp  vm-win.cpp  vm.cpp  vm.hpp
src/impl/bitIndex/: address.hpp  level.hpp  level.ipp  orderEvaluator.hpp
src/impl/stack/: content.cpp  content.hpp  header.hpp  layout.hpp
src/impl/utils/: align.hpp  sized_cast.hpp  sized_cast.ipp
